--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     th th, th td { width: 50px; min-width: 50px; max-width: 50px; }
 		.stickyheader { margin: 10px 0; }
 		.stickyheader th { width: 20px; max-width: 20px; min-width: 20px; overflow: hidden; height: 180px; text-align: right; }
-		.stickyheader th p { writing-mode:tb-rl; -webkit-transform: translateX(5px) translateY(150px) rotate(-90deg); -moz-transform: translateX(5px) translateY(150px) rotate(-90deg); -o-transform: translateX(5px) translateY(150px) rotate(-90deg);  }
+		.stickyheader th p { transform: rotateZ(90deg) translateY(-5px);  }
 		.content td { width: 20px; height: 20px; transition: 0.25s; }
 		.content td.active { background: #7ADB59; }
 		.content td.bubble { background: #7CC2FF; }
